release/0.2.3/README.md
# Keyplus Diagnostic 펌웨어 0.2.3 — OTA 배포 패키지

| 항목 | 값 |
|---|---|
| 버전 | **0.2.3** (`FW_VERSION`, `config.h`) |
| 보드 | LILYGO T-A7670E (ESP32-WROVER, Flash 4MB) |
| 파일 | `keyplus-diagnostic-0.2.3.bin` |
| 크기 | **384,368 bytes** |
| MD5 | `85fbb8fab288303b8f386ac00a2bbaea` |
| SHA-256 | `50bb0cee023264cf88f9d238c8abf4191d7b6a33863b3c717008072ff6defc68` |
| OTA 슬롯 | 1,966,080 bytes (min_spiffs.csv, **19.5% 사용**) |

단말은 **MD5만** 검증합니다(`Update.setMD5`). SHA-256은 배포 경로 무결성 확인용입니다.

## 0.2.2 대비 변경

- **차키 버튼 기본 누름 유지시간 120ms → 500ms** (`CARKEY_PRESS_MS`).
  `press()`는 이 시간만큼 `delay()`로 블로킹하므로, 그동안 loop가 멈춰
  LED 패턴·콘솔·MQTT URC 펌핑이 정지합니다(1회 500ms).
  콘솔 `lock 300` / `unlock 300` 처럼 1~5000ms 범위에서 일시 변경할 수 있습니다.
- `help`의 차키 안내가 실제 기본 펄스폭을 숫자로 표시합니다.

## 0.2.1 대비 변경 (실기에서 확인된 버그 수정)

- **모뎀 리셋 후 MQTT 영구 접속불가 수정** — 모뎀을 리셋하면 CMQTT 서비스와 구독이
  모뎀 쪽에서 사라지는데 펌웨어 플래그가 그대로 남아, `mqtt_begin()`(CMQTTSTART)을
  건너뛴 채 접속만 시도해 영영 실패했습니다. 실기에서 8분 넘게 재현됐습니다.
- **재접속 시 재구독 누락 수정** — `clean_session=1`이라 세션마다 브로커 쪽 구독이
  사라지는데, 구독 플래그가 남아 재구독을 건너뛰었습니다(모뎀 리셋과 무관한 별개 결함).
- **`[STAT]`의 rssi** — 미접속 구간에서 끊길 당시의 값(99=측정불가)으로 굳어,
  실제로는 회복됐는데도 전파가 없는 것처럼 보이던 문제를 고쳤습니다.

---

## 파일 구성

```
keyplus-diagnostic-0.2.3.bin       OTA로 내려보낼 이미지 (app 파티션 전용)
keyplus-diagnostic-0.2.3.bin.md5   MD5 한 줄 (배포 서버 검증용)
ota-manifest.json                  배포 메타 (버전/크기/해시/변경점) — url 채워서 사용
ota_start.json                     MQTT 명령 템플릿 — url/command_id 채워서 발행
```

> ⚠️ 이 `.bin`은 **app 이미지**입니다. USB로 처음 굽는 `0x0` 통합 이미지가 아닙니다.
> 시리얼 최초 플래싱은 `pio run -t upload`을 쓰세요.

---

## 배포 절차

1. `keyplus-diagnostic-0.2.3.bin`을 HTTP(S)로 접근 가능한 곳에 올린다.
2. `ota-manifest.json`의 `url`을 실제 주소로 채워 배포 기록으로 남긴다.
3. `ota_start.json`의 `command_id`(UUID)와 `url`을 채운다.
4. 대상 단말의 **`v1/{device_id}/cmd`** 토픽으로 발행한다 (QoS 1).
   예: `v1/vt-2607-0005-6jn/cmd`
5. 단말이 다운로드 → 플래시 → 재부팅한다.
6. 재부팅 후 MQTT 재접속되면 **`v1/{device_id}/cmd/ack`** 로 결과가 올라온다.

---

## ⚠️ 반드시 지킬 제약

### 1. 명령 JSON은 **약 1,000 바이트 미만**이어야 한다

0.2.3에서 상한을 크게 올렸습니다. 그래도 무제한은 아닙니다.

| 버전 | 실효 상한 | 근거 |
|---|---|---|
| ~0.2.0 | **231 B** | 래퍼 RX 버퍼 256B에 토픽(24B)까지 함께 담김 |
| 0.2.1+ | **약 1,000 B** | RX 버퍼 1024B − 토픽 24B |

래퍼(`TinyGsmMqttA76xx`)가 토픽과 페이로드를 **하나의 버퍼에** 나눠 담기 때문에,
토픽 길이만큼 페이로드 여유가 줄어듭니다. 넘치면 **경고 없이 잘리고**, 잘린 JSON은
뒤쪽 필드를 못 찾아 `url`이 빈 값이 되어 `[OTA] 잘못된 URL`로 실패합니다.

실제 URL+UUID를 넣은 `ota_start` 예시가 218 B이므로 여유는 충분합니다
(0.2.0에서는 231 B 상한에 13 B 여유뿐이었습니다).

발행 전 확인:
```bash
python3 -c "import json;print(len(json.dumps(json.load(open('ota_start.json')),separators=(',',':'))),'bytes')"
```

### 2. `version`은 `0.2.3`과 **정확히** 일치해야 한다

재부팅 후 실행 이미지의 `FW_VERSION`과 대조해 ack를 결정합니다(`ota.cpp`).
불일치하면 실제로는 성공했어도 **`failed`로 ack**가 나갑니다.

### 3. URL은 `http`로 시작해야 한다

`ota.cpp`가 `url.startsWith("http")`로 1차 검증합니다. HTTPS 권장.

### 4. 다운로드 중에는 MQTT가 끊긴다

모뎀의 SSL 컨텍스트를 HTTP(S)에 양보하려고 `Mqtt::stopService()`를 먼저 호출합니다.
그래서 ack는 즉시 나가지 않고 **재부팅 후 재접속 시점에 발행**됩니다(NVS pending).

### 5. 재부팅 후 10분 안에 MQTT에 붙어야 확정된다

새 이미지는 `PENDING_VERIFY` 상태로 부팅하고, MQTT 접속에 성공해야
`Ota::onHealthy()`가 확정(`mark_valid`)합니다.
`OTA_CONFIRM_DEADLINE_MS`(10분) 안에 못 붙으면 **자동 롤백 재부팅**됩니다.

→ 전파가 약한 곳이나 **전원이 불안정한 차량에서는 OTA를 피하세요.**
0.2.3에서 브라운아웃이 관측된 개체라면 전원 보강 후에 진행하는 게 안전합니다.

---

## 발행 예시

```bash
mosquitto_pub -h mqtt-dev.keyplus.sponeinfra.com -p 40102 \
  --cafile ca.pem \
  -u vt-2607-0005-6jn -P '<mqtt_pw>' \
  -t 'v1/vt-2607-0005-6jn/cmd' -q 1 \
  -f ota_start.json
```

### 진행 확인 (콘솔)

USB-C 또는 보조 UART(TX=GPIO13 / RX=GPIO34, 115200)에서:

```
[OTA] 시작 cmd=... ver=0.2.3
  url=https://.../kpd-0.2.3.bin
  md5=85fbb8fab288303b8f386ac00a2bbaea
[OTA] 펌웨어 크기 384368 bytes — 플래시 시작
[OTA] 10% (38436/384368)
...
[OTA] 플래시 완료·검증 통과 — 재부팅 예약
```

재부팅 후:

```
============================================================
  Keyplus Diagnostic   fw 0.2.3
  reset      : SW(소프트 리셋/재부팅)
============================================================
[OTA] 새 이미지 확정(mark_valid) ... — 롤백 취소
[OTA] pending ack: cmd=... 기대=0.2.3 실행=0.2.3 → done
```

`info` 명령으로도 버전을 바로 확인할 수 있습니다.

---

## 배포 전 체크리스트

- [ ] 업로드한 파일의 MD5가 위 값과 일치 (`md5 -q <file>`)
- [ ] URL이 단말에서 접근 가능 (사설망/방화벽 확인)
- [ ] `ota_start.json` 직렬화 길이 **< 1,000 bytes** (0.2.3 기준)
- [ ] `version` 필드가 `0.2.3`
- [ ] 대상 단말이 **`cmd` 구독 성공** 상태 — `status server`에서 `[ok]` 확인
      (0.2.3 이전 이미지는 구독 실패 버그가 있어 명령 자체를 못 받습니다)
- [ ] 단말 전원 안정 (브라운아웃 이력 없음 — `info`의 `reset` 확인)
- [ ] 1대 선행 배포 후 확대

> **0.2.1은 사용하지 마세요.** 배포 전 실기 테스트에서 결함이 발견되어 0.2.3로 대체했습니다
> — 모뎀 리셋 후 CMQTT 서비스 플래그가 모뎀 상태와 어긋나 MQTT에 영영 재접속하지 못했습니다.
>
> **0.2.0 → 0.2.3 OTA 주의**: 0.2.0에는 cmd 구독이 간헐적으로 실패하는 버그가 있어
> `ota_start` 명령이 단말에 **도달하지 않을 수 있습니다.** 구독이 안 되는 개체는
> 시리얼로 0.2.3를 먼저 구운 뒤, 이후 버전부터 OTA를 사용하세요.
